<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:gravity="center"
        style="@style/containers"
        >


    <android.support.percent.PercentRelativeLayout
            android:id="@+id/percentRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:paddingTop="20dp"
    >
        <TextView
                android:id="@+id/txt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                app:layout_marginLeftPercent="5%"
                app:layout_marginRightPercent="5%"
                android:textSize="23sp"
                android:text="@string/activity_address_confirm_title"
                android:textColor="@color/blue_strong"
                android:paddingBottom="20dp"/>

        <EditText
                android:layout_below="@+id/txt2"
                android:id="@+id/edtStreet"
                android:layout_height="35dp"
                style="@style/edit_text_default"
                android:ellipsize="end"
                android:ems="10"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/activity_address_confirm_hint_1"
                android:inputType="textPersonName"
                android:lines="1"
                android:singleLine="true"
                app:layout_marginLeftPercent="5%"
                app:layout_widthPercent="60%" />

        <EditText
                android:layout_below="@+id/txt2"
                android:id="@+id/edtNumber"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                style="@style/edit_text_default"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/activity_address_confirm_hint_2"
                android:inputType="text"
                android:maxLength="10"
                app:layout_marginRightPercent="5%"
                app:layout_widthPercent="28%" />


        <EditText
                android:id="@+id/edtComplement"
                android:layout_height="35dp"
                android:layout_below="@+id/edtNumber"
                android:layout_marginTop="30dp"
                android:ems="10"
                style="@style/edit_text_default"
                android:gravity="center"
                android:hint="@string/activity_address_confirm_hint_3"
                android:inputType="text"
                android:maxLength="100"
                app:layout_marginLeftPercent="5%"
                app:layout_marginRightPercent="5%"
                app:layout_widthPercent="90%" />


    </android.support.percent.PercentRelativeLayout>

    <Button
            android:id="@+id/button"
            android:text="@string/activity_address_confirm_button"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/button_default"
            android:background="@color/blue_strong"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>